--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node_modules/mocha/bin/mocha test/test_harness",
     "start": "node server.js"
   },
   "repository": {
@@ -35,6 +35,7 @@
     "debug": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
-    "gulp-mocha": "^3.0.0"
+    "gulp-mocha": "^3.0.0",
+    "morgan": "^1.7.0"
   }
 }
