--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.7",
-    "mongoose": "^4.5.8"
+    "mongoose": "^4.5.8",
+    "morgan": "^1.7.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
@@ -36,6 +37,5 @@
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
     "gulp-mocha": "^3.0.0",
-    "morgan": "^1.7.0"
   }
 }
