--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
     "debug": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
-    "gulp-mocha": "^3.0.0",
+    "gulp-mocha": "^3.0.0"
   }
 }
