--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
     "bcrypt": "latest",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
+    "cron": "^1.1.0",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.7",
-    "mongoose": "^4.5.8"
+    "mongoose": "^4.5.8",
+    "morgan": "^1.7.0",
+    "request": "^2.74.0",
+    "twilio": "^2.9.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
@@ -35,7 +39,6 @@
     "debug": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
-    "gulp-mocha": "^3.0.0",
-    "morgan": "^1.7.0"
+    "gulp-mocha": "^3.0.0"
   }
 }
