added eslint... to package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha tests/test_harness.js",
     "start": "node server.js",
-    "lint": "./node_modules/eslint/bin/eslintrc.js"
+    "lint": "./node_modules/eslint/bin/eslint.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "cron": "^1.1.0",
+    "eslint": "^3.2.2",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.7",
     "mongoose": "^4.5.8",
