--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "cron": "^1.1.0",
+    "dotenv": "^2.0.0",
     "eslint": "^3.2.2",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.7",
@@ -34,6 +35,7 @@
     "morgan": "^1.7.0",
     "nodemailer": "^2.5.0",
     "request": "^2.74.0",
+    "sendgrid": "^4.0.1",
     "twilio": "^2.9.2"
   },
   "devDependencies": {
